# emacs-old

./: .emacs  .gitignore  README.md
.emacs.d/: %backup%~  .mc-lists.el  .org-id-locations  tramp  web-vcs-log.org  web-vcs-log.org~
.emacs.d/auto-save-list/: .saves-3020-dhcp-23.bravo~  .saves-43611-dhcp-09-220.bravo~  .saves-51032-dhcp-08-153.bravo~  .saves-79822-dhcp-08-153.bravo~  .saves-91210-dhcp-23.bravo~
.emacs.d/elpa/ace-jump-mode-20121104.1157/: ace-jump-mode-autoloads.el  ace-jump-mode-pkg.elc  ace-jump-mode.elc
.emacs.d/elpa/ack-and-a-half-1.0.0/: ack-and-a-half-autoloads.el  ack-and-a-half-pkg.elc  ack-and-a-half.elc
.emacs.d/elpa/ack-and-a-half-20130204.1838/: ack-and-a-half-autoloads.el  ack-and-a-half-pkg.elc  ack-and-a-half.elc
.emacs.d/elpa/alert-20130510.912/: alert-autoloads.el  alert-pkg.elc  alert.elc
.emacs.d/elpa/apache-mode-2.0/: apache-mode-autoloads.el  apache-mode-pkg.elc  apache-mode.elc
.emacs.d/elpa/apache-mode-20080905.553/: apache-mode-autoloads.el  apache-mode-pkg.elc  apache-mode.elc
.emacs.d/elpa/bbdb-20130526.1945/: bbdb-anniv.elc  bbdb-autoloads.el  bbdb-com.elc  bbdb-gnus.elc  bbdb-ispell.elc  bbdb-message.elc  bbdb-mhe.elc  bbdb-migrate.elc  bbdb-mua.elc  bbdb-pkg.elc  bbdb-print.elc  bbdb-rmail.elc  bbdb-sc.elc  bbdb-snarf.elc  bbdb.elc
.emacs.d/elpa/bbdb2erc-0.1.0/: bbdb2erc-autoloads.el  bbdb2erc-autoloads.el~  bbdb2erc-pkg.el  bbdb2erc-pkg.elc
.emacs.d/elpa/bbdb2erc-20130607.829/: bbdb2erc-autoloads.el  bbdb2erc-pkg.el  bbdb2erc-pkg.elc  bbdb2erc.el  bbdb2erc.elc
.emacs.d/elpa/color-theme-20080305.834/: color-theme-autoloads.el  color-theme-pkg.elc  color-theme.elc
.emacs.d/elpa/color-theme-solarized-20130307.1350/: color-theme-solarized-autoloads.el  color-theme-solarized-pkg.elc  color-theme-solarized.elc  solarized-dark-theme.elc  solarized-definitions.elc  solarized-light-theme.elc
.emacs.d/elpa/column-marker-20121128.843/: column-marker-autoloads.el  column-marker-pkg.elc  column-marker.elc
.emacs.d/elpa/dsvn-20130120.1457/: dsvn-autoloads.el  dsvn-pkg.elc  dsvn.elc
.emacs.d/elpa/dsvn-922257/: dsvn-autoloads.el  dsvn-pkg.elc  dsvn.elc
.emacs.d/elpa/ecb-20130406.1406/: ecb-advice-test.elc  ecb-analyse.elc  ecb-autogen.elc  ecb-autoloads.el  ecb-buffertab.elc  ecb-cedet-wrapper.elc  ecb-common-browser.elc  ecb-compatibility.elc  ecb-compilation.elc  ecb-create-layout.elc  ecb-cycle.elc  ecb-eshell.elc  ecb-examples.elc  ecb-face.elc  ecb-file-browser.elc  ecb-help.elc  ecb-jde.elc  ecb-layout-defs.elc  ecb-layout.elc  ecb-method-browser.elc  ecb-mode-line.elc  ecb-multiframe.elc  ecb-navigate.elc  ecb-pkg.elc  ecb-semantic-wrapper.elc  ecb-semantic.elc  ecb-speedbar.elc  ecb-symboldef.elc  ecb-tod.elc  ecb-upgrade.elc  ecb-util.elc  ecb-winman-support.elc  ecb.elc  silentcomp.elc  tree-buffer.elc
.emacs.d/elpa/etags-select-1.13/: etags-select-autoloads.el  etags-select-pkg.elc  etags-select.elc
.emacs.d/elpa/expand-region-20130610.737/: cc-mode-expansions.elc  clojure-mode-expansions.elc  cperl-mode-expansions.elc  css-mode-expansions.elc  er-basic-expansions.elc  erlang-mode-expansions.elc  expand-region-autoloads.el  expand-region-core.elc  expand-region-custom.elc  expand-region-pkg.elc  expand-region.elc  feature-mode-expansions.elc  html-mode-expansions.elc  js-mode-expansions.elc  js2-mode-expansions.elc  jsp-expansions.elc  latex-mode-expansions.elc  nxml-mode-expansions.elc  octave-expansions.elc  python-el-expansions.elc  python-el-fgallina-expansions.elc  python-mode-expansions.elc  ruby-mode-expansions.elc  text-mode-expansions.elc  the-org-mode-expansions.elc  web-mode-expansions.elc
.emacs.d/elpa/full-ack-0.2.3/: full-ack-autoloads.el  full-ack-pkg.elc  full-ack.elc
.emacs.d/elpa/full-ack-20120401.2119/: full-ack-autoloads.el  full-ack-pkg.elc  full-ack.elc
.emacs.d/elpa/full-ack-20130326.36/: full-ack-autoloads.el  full-ack-pkg.elc  full-ack.elc
.emacs.d/elpa/full-ack-20130423.2204/: full-ack-autoloads.el  full-ack-pkg.elc  full-ack.elc
.emacs.d/elpa/gh-0.5.3/: gh-api.elc  gh-auth.elc  gh-autoloads.el  gh-cache.elc  gh-common.elc  gh-gist.elc  gh-issues.elc  gh-oauth.elc  gh-pkg.elc  gh-pulls.elc  gh-repos.elc  gh.elc
.emacs.d/elpa/gh-20130315.745/: gh-api.elc  gh-auth.elc  gh-autoloads.el  gh-cache.elc  gh-common.elc  gh-gist.elc  gh-issues.elc  gh-oauth.elc  gh-orgs.elc  gh-pkg.elc  gh-profile.elc  gh-pulls.elc  gh-repos.elc  gh-url.elc  gh.elc
.emacs.d/elpa/gh-20130318.2210/: gh-api.elc  gh-auth.elc  gh-autoloads.el  gh-cache.elc  gh-common.elc  gh-gist.elc  gh-issues.elc  gh-oauth.elc  gh-orgs.elc  gh-pkg.elc  gh-profile.elc  gh-pulls.elc  gh-repos.elc  gh-url.elc  gh.elc
.emacs.d/elpa/gh-20130526.2124/: gh-api.elc  gh-auth.elc  gh-autoloads.el  gh-cache.elc  gh-common.elc  gh-gist.elc  gh-issues.elc  gh-oauth.elc  gh-orgs.elc  gh-pkg.elc  gh-profile.elc  gh-pulls.elc  gh-repos.elc  gh-url.elc  gh.elc
.emacs.d/eshell/: alias  history  lastdir
.emacs.d/lisp/: autostart.elc  autostart22.elc  cldoc.elc  groovy-eval.el  nxhtml-base.elc  nxhtml-loaddefs.elc  nxhtml-web-vcs.elc  nxhtmlmaint.elc  paredit.elc  web-autoload.elc  web-vcs.elc
.emacs.d/lisp/clm-4/: HISTORY.clm  README.clm  all.lisp  balance.html  cl-fm.html  clm-config.h.in  clm-example.lisp  clm-package.fasl  clm-package.lisp  clm-test.lisp  clm.asd  clm.html  clm1.fasl  clm1.lisp  clm_FM_VIOLIN.c  cmus.c  cmus.h  cnv.ins  config.status  configure  configure.ac  defaults.fasl  defaults.lisp  defins.fasl  defins.lisp  dlocsig.lisp  env.fasl  expandn.ins  export.fasl  export.lisp  ffi-test.lisp  ffi.fasl  ffi.lisp  freeverb.ins  grani.ins  initmus.fasl  initmus.lisp  libclm.def  mus-config.h  mus-config.h.in  (+20 more)
.emacs.d/mypa/: groovy-electric.el  misc.el  misc.el~  my-ace-jump-stuff.el  my-ansi-term.el  my-bloom-stuff.el  my-ediff-stuff.el  my-emoticons.el  my-eshell-setup.el  my-groovy-grails-stuff.el  my-jabber-stuff.el  my-java-setup.el  my-macros.el  my-magit-stuff.el  my-setup.el  my-victaulic-stuff.el  my-web-mode-stuff.el  my-windows-management-stuff.el
.emacs.d/url/: cookies  cookies~
(+771 files in other folders)
